Table of correlations for collagen and fibre properties

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -238,6 +238,9 @@ What should be looked at here is the relations of collagen measurements to folli
 
 [ An alternative would be to get follicle curvature and unevenness ( and probably depth) on the current data, where we have the actual collagen measurements. Is that possible?]
 
+We will summarize what we have on collagen and fibre properties as a table of correlations (Table~\ref{tab:collfibcor}).
+\input{tabcollfibcor.tex}
+The SkinSoft score shows basically the same correlations as CMP, and the same with opposite sign as CSTmean. In this case CMP has stronger correlations with fibre properties than either CSTmean or SkinSoft score.
 
 \clearpage
 \section{Discussion}
