Revise collagen-link hypothesis to include SDDs and unevenness

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -58,7 +58,8 @@ So it is a question of balance between collagen development and follicle develop
 If this proposed mechanism is correct we expect
 \begin{itemize}
 \item wrinkled sheep will have either more collagen or harder collagen or both in the dermal layer
-\item sheep with more or harder collagen will have lower pp-cell numbers,with consequent lower S/P ratio and higher S fibre diameters.
+\item sheep with more or harder collagen will have lower pp-cell numbers,with consequent lower S/P ratio 
+\item sheep with more or harder collagen may have a higher secondary fibre diameter. This would be an indirect effect, as a consequence of forming less branching follicles.
 \end{itemize}
  
 These expectations can be tested. We do that by measuring collagen amount and softness in the dermal layer of skin specimens, and relating it to wrinkle, S/P ratio, and diameter of secondary fibres.
@@ -74,6 +75,9 @@ If this proposition is correct we expect
 \item sheep with more or harder collagen to have curved follicles
 \item sheep with curved follicles to grow curved fibres, with a more radical ortho/para segmentation
 \item sheep with curved follicles to have a lower fibre length growth rate
+\item sheep with curved follicles may have a higer average secondary fibre diameter
+\item sheep with more or harder collagen may have follicles of uneven depth
+\item sheep with follicles of uneven depth may have greater variability of secondary fibre diameter
 \end{itemize}
 
 These expectations can also be tested. We already know that the overall genetic correlation of wrinkle score with crimp frequency is 0.46 (95 percent confidence limits 0.40-0.51) , and the genetic correlation of wrinkle score with follicle curvature score is 0.69 ( 95 percent confidence limits 0.65-0.74) (Jackson (2017)~\cite{jack:17a}).  These strong correlations are an overall corfirmation, but do not prove that collagen is the linking factor.  In the present study we have collagen measurements, but we do not have follicle curvature scores, so testing the above expectations will have to be completed elsewhere.
@@ -206,7 +210,7 @@ This proves that we can put follicle number aside and just concentrate on the re
 
 
 \subsection{Collagen and Fibre growth}
-The collagen-link hypothesis postulates that sheep with high and/or hard collagen skins will have higher average diameter of secondary fibres, more curved fibres, and a lower fibre length growth rate. It does not postulate anything about the variability of fibre diameter. The effect on mean secondary fibre diameter is not direct, it is secondary to the effect on S/P ratio.
+The collagen-link hypothesis postulates that sheep with high and/or hard collagen skins will have higher average diameter of secondary fibres, more curved fibres, and a lower fibre length growth rate. It  also suggests that sheep with high and/or hard collagen skins will have a high follicle unevenness score , which we know to be associated with high variability of fibre diameter. The effect on mean secondary fibre diameter is not direct, it is secondary to the effect on S/P ratio, it being known that highly branched follicles grow finer fibres.
 
 Figure~\ref{fig:tstds} shows the correlation of TST measurement with meandiameter of secondary fibres.
 \input{figtstds.tex}
@@ -244,7 +248,20 @@ The SkinSoft score shows basically the same correlations as CMP, and the same wi
 
 \clearpage
 \section{Discussion}
+\subsection{Correlations in general}
+ All of the correlations we have examined are in the directions expected from the collagen-link hypothesis.  So in that sense, we have no data that would negate the hypothesis. However, that is far from a proof. Correlation does not imply causation, it may imply that the two correlated items have a common cause; in fact this is what we argue, that the collagen measurements and follicle measurements are negatively correlated because fibroblast development and pre-papilla cell development both depend on a shared resource. We think that this shared resource is the population of mesenchymal stem cells which are available for differentiation at the appropriate stage. It may not be that, it could be some protein or biochemical molecule required for differentiation of both cell types.
 
+The correlations all have the expected sign, but they are not large. For example a 0.40 correlation only implies 16 percent of the variance is in common. This is not unexpected for two reasons
+\begin{itemize}
+\item measurement errors, particularly for the new collagen measuements, will reduce observed correlations
+\item factors other than the relationships we are postulating will affect our measurements, diluting the observed relationships. We look at some specific cases of this below.
+\end{itemize}
+
+
+\subsection{Collagen and pre-papilla cell number}
+\subsection{pre-papilla cell number and follicle number and fibre diameter}
+\subsection{Collagen and follicle curvature, follicle unevenness, and SD of fibre diameter}
+\subsection{Collagen and wrinkle}
 
 
 \clearpage
@@ -286,6 +303,9 @@ Knight, K.R., Lepore, D.A., Horne, R.S., Ritz, M., Kumta, S. and O'Brian, B.M. (
 
 \bibitem{madd:88}
 Maddocks, I.G. and Jackson, N. (1988) Structural studies of sheep, cattle, and goat skin. CSIRO, Division of Aimal Production, Sydney.
+
+\bibitem{ment:80}
+Menton, D.N. and Hess, R.A. (1980) The ultrastructure of collagen in the dermis of tight-skin (Tsk) mutant mice. The Journal of Investigative Dermatology 74:139-147
 
 \bibitem{mitc:84}
 Mitchell, T.W. et al (1984) Wool Technology and Sheep Breeding, No IV, 200-206
