Add Carter(1943) ref on collagen and wrinkle and trio groups

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -65,9 +65,17 @@ If this proposed mechanism is correct we expect
 These expectations can be tested. We do that by measuring collagen amount and softness in the dermal layer of skin specimens, and relating it to wrinkle, S/P ratio, and diameter of secondary fibres.
 
 \subsection{The wrinkle - hard collagen - curved follicles - curved fibres link}
-In skin with wrinkle development, there is more hard collagen in the dermis. The downgrowths of epithelial tissue which form developing follicles have to penetrate and displace the dermal tissue. If the dermis is soft collagen with a reticular pattern, the follicle downgrowths can readily penetrate dermal tissue and are straight. If the dermis has hard, intermeshed collagen, the follicle downgrowths can not readily penetrate the dermis to fuill depth, so they grow in a curved shape and the bulbs are closer to the epidermis.  The orientation of the plane of curvature would depend on spatial considerations. Curved follicles grow curved fibres, with a greater proportion of para cortex, and a more highly keratinised paracortex.
+In skin with wrinkle development, there is more hard collagen in the dermis. The downgrowths of epithelial tissue which form developing follicles have to penetrate and displace the dermal tissue. If the dermis is soft collagen with a reticular pattern, the follicle downgrowths can readily penetrate dermal tissue and are straight. If the dermis has hard, intermeshed collagen, the follicle downgrowths can not readily penetrate the dermis to full depth, so they grow in a curved shape and the bulbs are closer to the epidermis.  The orientation of the plane of curvature would depend on spatial considerations. Curved follicles grow curved fibres, with a greater proportion of para cortex, and a more highly keratinised paracortex.
 
-So it is a question of the way the bulb cells differentiate to form the fibre cortex in straight versus curved follicles. In curved follicles there is more bilateral asymmetry in the fibre cortex. If there is more keratinization it means bulb cell differentiation into fibre proceeds for longer, so the fibre length growth rate would be slower. There may also be differences in blood vessel supply to follicles between skins with curved and straight follicles (Nay(1966)~\cite{nay:66}). Collagen development and blood vessel development may therefore interact.
+The effect of growth of collagen in the dermis on follicle trio group raarngement has been known for a long time. Carter(1943)~\cite{cart:43} makes the following observation. He is referring to the appearance of trio goups in horizontal skin sections.
+
+\begin{quote}
+"The growth of dermal connective tissue tends to disrupt the earlier, more orderly, arrangement, so that the original trio group may be hard to discern. At the same time the linear arrangement of adjacent groups may also be distorted. These changes are more apparent than real, and are due to the rapid increase in absolute size of the group. If a low enough magnification is used, and suffifiently wide areas of skin mapped, it can easily be seen that, on the whole, the primitive order remains. Connective tissue growth may continue as long as there is a general increase in body size. In some animals it is especially exuberant, resulting in the formation of skin wrinkles and folds. The expansion in area of the follicle group, due to this process, is most clearly shown in the decreasing density of the primary follicles as growth continues."
+\end{quote}
+
+This phenomenon of disruption of the arrangement of trio groups as seen in horizontal sections was known to Ted Nay ( see Figure 87 of Maddocks and Jackson(1988)~\cite{madd:88}), who observed that sheep with tangled or curved follicles tended to have more trio group disruption. This observation links follicle curvature to collagen growth. 
+
+Fibre growth is a question of the way the bulb cells differentiate to form the fibre cortex in straight versus curved follicles. In curved follicles there is more bilateral asymmetry in the fibre cortex. If there is more keratinization it means bulb cell differentiation into fibre proceeds for longer, so the fibre length growth rate would be slower. There may also be differences in blood vessel supply to follicles between skins with curved and straight follicles (Nay(1966)~\cite{nay:66}). Collagen development and blood vessel development may therefore interact.
 
 If this proposition is correct we expect
 \begin{itemize}
@@ -273,6 +281,8 @@ The correlations all have the expected sign, but they are not large. For example
 \bibitem{brow:68}
 Brown, G.H., and Turner, Helen Newton. (1968) Response to selection in Australian Merino sheep. II. Estimates of phenotypic and genetic parameters for some production traits in Merino ewes and an analysis of the possible effects of selection on them. Aust. J. Agric. Res. 19:303-22
 
+\bibitem{cart:43}
+Carter H.B. (1943) Studies in the biology of the skin and fleece of sheep. 1. The development and general histology of the follicle group in the skin of the Merino. 2. The use of tanned sheepskin in the study of follicle population density. 3. Notes on the arrangement, nomenclature, and variation of skin folds and wrinkles in the Merino. C.S.I.R. Bulletin No 164, Melbourne, 1943
 
 \bibitem{fras:60}
 Fraser A.S and Short B.F. (1960) The Biology of the Fleece. Animal Research Laboratories Technical Paper No 3. CSIRO Melbourne 1960.
