Propose that orderly trio groups in SRS are consequence of low collagen dev.

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -75,6 +75,8 @@ The effect of growth of collagen in the dermis on follicle trio group raarngemen
 
 This phenomenon of disruption of the arrangement of trio groups as seen in horizontal sections was known to Ted Nay ( see Figure 87 of Maddocks and Jackson(1988)~\cite{madd:88}), who observed that sheep with tangled or curved follicles tended to have more trio group disruption. This observation links follicle curvature to collagen growth. 
 
+Given the above, it is obvious that sheep of SkinType {\em SRS} have very little disruption of the arrangement of trio groups, since in an adult horizontal section their trio groups appear in orderly rows, just like in a lamb, so they should also have minimal development of collagen tissue. This is a proposition we can test with the collagen measurements made in this study.
+
 Fibre growth is a question of the way the bulb cells differentiate to form the fibre cortex in straight versus curved follicles. In curved follicles there is more bilateral asymmetry in the fibre cortex. If there is more keratinization it means bulb cell differentiation into fibre proceeds for longer, so the fibre length growth rate would be slower. There may also be differences in blood vessel supply to follicles between skins with curved and straight follicles (Nay(1966)~\cite{nay:66}). Collagen development and blood vessel development may therefore interact.
 
 If this proposition is correct we expect
@@ -158,7 +160,7 @@ Figure~\ref{fig:CSTskintype} shows the CST of the four SkinTypes as a boxplot.
 \input{figCSTskintype.tex}
 Here we see that there substantial differences, and in the order expected. The {\em tight} SkinType has the greates compressed skin thickness, followed by the {\em flat} SkinType, followed by {\em semi-SRS}, and {\em SRS} SkinType has the smallest CST. We check that this is significant with another analysis of variance in Table~\ref{tab:cstaov}
 \input{tabcstaov.tex}  
-In this case both the Flock and SkinType effects are significant, but not the interaction. So we conclude that thickness of collagen in the dermis after compression is greater in wrinkled sheep ({\em tight} grade), and is reduced in sheep with loose skin ({\em SRS} grade).
+In this case both the Flock and SkinType effects are significant, but not the interaction. So we conclude that thickness of collagen in the dermis after compression is greater in wrinkled sheep ({\em tight} grade), and is reduced in sheep with loose skin ({\em SRS} grade). This agrees with the proposition that the orderly trio groups in {\em SRS} grade sheep are a  consequence of less development of collagen tissue.
 
 We suspect that because the SkinType differences were in CST but not in TST that what we are looking at is differences between hard and soft collagen, the latter being more readily compressed. We can express this more succinctly by analysing compressibility (CMP).
 
@@ -166,7 +168,7 @@ Figure~\ref{fig:CMPskintype} shows the CMP measurement of the four SkinTypes as 
 \input{figCMPskintype.tex}
 Here we see a similar picture to the CST graphs, there being substantial differences and in the order expected. The {\em tight} grade, which is wrinkles, is only 60 percent compressible, and the others range up to 80 percent in order. We check the significvance in another analysis of variance in Table~\ref{tab:cmpaov}
 \input{tabcmpaov.tex}
-As for CST the Flock and SkinType effects are significant, but not the interaction. So we conclude that compressibility is least in wrinkled sheep ({\em tight} grade), and is greatest in sheep with loose skin ({\em SRS} grade). So the collagen is harder in wrinkled sheep, and softer in sheep with loose skin.
+As for CST the Flock and SkinType effects are significant, but not the interaction. So we conclude that compressibility is least in wrinkled sheep ({\em tight} grade), and is greatest in sheep with loose skin ({\em SRS} grade). So the collagen is harder in wrinkled sheep, and softer in sheep with loose skin. This also agrees with the proposition that the orderly trio groups in {\em SRS} grade sheep are a  consequence of less development of collagen tissue.
 
 \subsection{Collagen Flock differences}
 \label{sec:collflock}
