Add Nay(1966) ref to trio group disruption discussion

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -73,7 +73,7 @@ The effect of growth of collagen in the dermis on follicle trio group raarngemen
 "The growth of dermal connective tissue tends to disrupt the earlier, more orderly, arrangement, so that the original trio group may be hard to discern. At the same time the linear arrangement of adjacent groups may also be distorted. These changes are more apparent than real, and are due to the rapid increase in absolute size of the group. If a low enough magnification is used, and suffifiently wide areas of skin mapped, it can easily be seen that, on the whole, the primitive order remains. Connective tissue growth may continue as long as there is a general increase in body size. In some animals it is especially exuberant, resulting in the formation of skin wrinkles and folds. The expansion in area of the follicle group, due to this process, is most clearly shown in the decreasing density of the primary follicles as growth continues."
 \end{quote}
 
-This phenomenon of disruption of the arrangement of trio groups as seen in horizontal sections was known to Ted Nay ( see Figure 87 of Maddocks and Jackson(1988)~\cite{madd:88}), who observed that sheep with tangled or curved follicles tended to have more trio group disruption. This observation links follicle curvature to collagen growth. 
+This phenomenon of disruption of the arrangement of trio groups as seen in horizontal sections was known to Ted Nay ( see Nay(1966)~\cite{nay:66} and Figure 87 of Maddocks and Jackson(1988)~\cite{madd:88}), who observed that sheep with tangled or curved follicles tended to have more trio group disruption. This observation links follicle curvature to collagen growth. Nay also noted that the arrangement of the vascular system was different for straight and tangled skin types.
 
 Given the above, it is obvious that sheep of SkinType {\em SRS} have very little disruption of the arrangement of trio groups, since in an adult horizontal section their trio groups appear in orderly rows, just like in a lamb, so they should also have minimal development of collagen tissue. This is a proposition we can test with the collagen measurements made in this study.
 
@@ -263,12 +263,15 @@ The SkinSoft score shows basically the same correlations as CMP, and the same wi
 
 The correlations all have the expected sign, but they are not large. For example a 0.40 correlation only implies 16 percent of the variance is in common. This is not unexpected for two reasons
 \begin{itemize}
-\item measurement errors, particularly for the new collagen measuements, will reduce observed correlations
+\item measurement errors, particularly for the new collagen measurements, will reduce observed correlations
 \item factors other than the relationships we are postulating will affect our measurements, diluting the observed relationships. We look at some specific cases of this below.
 \end{itemize}
 
+\subsection{Collagen development and pre-papilla cell development}
+Negative correlations , if we ignore the trivial case where one variable is measured on an inverse scale, may arise when two variables share some resource, so that an increase in one variable leads to a reduced amount of resource available for the other. This is commonly referred to a {\em tradeoff}.
 
-\subsection{Collagen and pre-papilla cell number}
+We envisage
+
 \subsection{pre-papilla cell number and follicle number and fibre diameter}
 \subsection{Collagen and follicle curvature, follicle unevenness, and SD of fibre diameter}
 \subsection{Collagen and wrinkle}
