Finish Fc, Fu, and Fd relation to collagen sections

--- a/supplementary/collagen/collagen.tex
+++ b/supplementary/collagen/collagen.tex
@@ -269,24 +269,36 @@ We need to try and get some insight into what sort of sheep are falling into the
 This is not entirely convincing. It needs further investigation, probably with a wider range of data.
 
 \subsubsection{Follicle unevenness}
-It is known that Follcle unevenness score and standard deviation of fibre diameter are correlated. The follicle results should therefore be similar to those for DsSD above.
+It is known that follicle unevenness score and standard deviation of fibre diameter are correlated. The follicle results should therefore be similar to those for DsSD above.
 
 Correlation of TST with Follicle unevenness was low ( 0.162 and not significant). The graph is not reported here.
 
 Figure~\ref{fig:CSTFu} shows the correlation of CSTmean measurement with follicle unevenness score.
 \input{figCSTFu.tex}
-This correlation is 0.72 and is significant $(P<0.01)$. Again we see thhe triangular scatter of points. A high CST means highly uneven follicles, but a low CST can be anything.
+This correlation is 0.41 and is significant $(P<0.01)$. Again we see thhe triangular scatter of points. A high CST means highly uneven follicles, but a low CST can be anything.
+
+Figure~\ref{fig:CMPFu} shows the correlation of CMP percentage with follicle unevenness score.
+\input{figCMPFu.tex}
+This correlation is 0.41 and is significant $(P<0.01)$. Again we see thhe triangular scatter of points. A high CMP means highly uneven follicles, but a low CST can be anything.
+
 
 \subsubsection{Follicle depth}
+We do not expect any relationship between collagen measurements and follicle depth, except perhaps with TST.
 
-\begin{verbatim}
-[Jim, I went looking for follicle curvature and length growth rate data - there is lots in the staple structure file, but on these sheep we have CrimpType but no SkinType. I am sure you have this info. We could use it here. It would at least confirm the collagen-curved follicles - curved fibres link. ]
-\end{verbatim}
+Figure~\ref{fig:TSTFd} shows the correlation of follicle depth with TST.
+\input{figTSTFd.tex}
+This correlation is 0.30 and is significant $(P<0.01)$.
 
+The correlations of follicle depth with CSTmean and CMP were small ( 0.23 and -0.11 respectively). THese are not shown as scatterplots.
+
+\subsubsection{Fibre length growth rate}
+We do not have fibre length growth rate data in this dataset.  The best we can do is to look elsewhere for the relationship between follicle curvature and fibre length growth rate. 
+
+\subsubsection{Summary of collagen measures and fibre properties}
 
 We will summarize what we have on collagen and fibre properties as a table of correlations (Table~\ref{tab:collfibcor}).
 \input{tabcollfibcor.tex}
-The SkinSoft score shows basically the same correlations as CMP, and the same with opposite sign as CSTmean. In this case CMP has stronger correlations with fibre properties than either CSTmean or SkinSoft score.
+The SkinSoft score shows basically the same correlations as CMP, and the same with opposite sign as CSTmean. CSTmean and CMP have similar correlations with fibre properties.
 
 \clearpage
 \section{Discussion}
