--- a/supplementary/collagen/tabcollfibcor.tex
+++ b/supplementary/collagen/tabcollfibcor.tex
@@ -1,20 +1,28 @@
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Tue Dec  5 20:58:46 2017
+% Sat Jan 20 21:08:18 2018
+\begin{center}
+\begin{landscape}
 \begin{table}[ht]
-\centering
-\caption{Correlations amongTST, CSTmean, CMP, SkinSoft, Ds, and DsSD}
+\caption{Correlations amongTST, CSTmean, CMP, SkinSoft, Ds, DsSD, Fc, Fu, and Fd} 
+\vspace{0.2in}
 \label{tab:collfibcor}
-\begin{tabular}{|rrrrrrr|}
+\begin{tabular}{|rrrrrrrrrr|}
   \hline
- & TST & CSTmean & CMP & SkinSoft & Ds & DsSD \\ 
+ & TST & CSTmean & CompressPer & SkinSoftScore & Ds & DsSD & Fc & Fu & Fdmean \\ 
   \hline
-TST & 1.00 & 0.34 & 0.13 & -0.26 & -0.04 & -0.01 \\ 
-  CSTmean & 0.34 & 1.00 & -0.88 & -0.73 & 0.34 & 0.39 \\ 
-  CMP & 0.13 & -0.88 & 1.00 & 0.64 & -0.40 & -0.43 \\ 
-  SkinSoft & -0.26 & -0.73 & 0.64 & 1.00 & -0.29 & -0.29 \\ 
-  Ds & -0.04 & 0.34 & -0.40 & -0.29 & 1.00 & 0.73 \\ 
-  DsSD & -0.01 & 0.39 & -0.43 & -0.29 & 0.73 & 1.00 \\ 
+TST & 1.00 & 0.34 & 0.13 & -0.26 & -0.04 & -0.01 & 0.13 & 0.13 & 0.28 \\ 
+  CSTmean & 0.34 & 1.00 & -0.88 & -0.73 & 0.34 & 0.39 & 0.74 & 0.47 & 0.26 \\ 
+  CompressPer & 0.13 & -0.88 & 1.00 & 0.64 & -0.40 & -0.43 & -0.71 & -0.42 & -0.16 \\ 
+  SkinSoftScore & -0.26 & -0.73 & 0.64 & 1.00 & -0.29 & -0.29 & -0.68 & -0.44 & -0.23 \\ 
+  Ds & -0.04 & 0.34 & -0.40 & -0.29 & 1.00 & 0.73 & 0.45 & 0.35 & 0.26 \\ 
+  DsSD & -0.01 & 0.39 & -0.43 & -0.29 & 0.73 & 1.00 & 0.36 & 0.31 & 0.35 \\ 
+  Fc & 0.13 & 0.74 & -0.71 & -0.68 & 0.45 & 0.36 & 1.00 & 0.71 & 0.14 \\ 
+  Fu & 0.13 & 0.47 & -0.42 & -0.44 & 0.35 & 0.31 & 0.71 & 1.00 & 0.12 \\ 
+  Fdmean & 0.28 & 0.26 & -0.16 & -0.23 & 0.26 & 0.35 & 0.14 & 0.12 & 1.00 \\ 
    \hline
 \end{tabular}
 \end{table}
+\end{landscape}
+\end{center}
+
 
